--- a/backend/api/templates/api/compass.html
+++ b/backend/api/templates/api/compass.html
@@ -313,7 +313,7 @@
                         navigator.share({
                                 title: "Share",
                                 text: stringText + "\n",
-                                url: '\nhttps://quran-khatmah.com/',
+                                url: '\nhttps://7sanah.com/',
                             })
                             .then(() => {})
                             .catch(console.error);
@@ -329,7 +329,7 @@
                                     title: "Share",
                                     text: "Direction: " +
                                         document.querySelector(".deg span:last-of-type").innerText + "\n",
-                                    url: '\nhttps://quran-khatmah.com/',
+                                    url: '\nhttps://7sanah.com/',
                                 })
                                 .then(() => {})
                                 .catch(console.error);
@@ -342,7 +342,7 @@
                             navigator.share({
                                     title: "Share",
                                     text: "Quran Khatmah Compass:",
-                                    url: '\nhttps://quran-khatmah.com/',
+                                    url: '\nhttps://7sanah.com/',
                                 })
                                 .then(() => {})
                                 .catch(console.error);
